--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --detectOpenHandles --config ./test/jest-e2e.json",
     "migration:run": "ts-node ..node_modules/typeorm/cli.js migration:run -d ./src/data.source.ts",
     "schema:sync": "npm run typeorm schema:sync -- -d src/data.source.ts",
     "typeorm": "typeorm-ts-node-commonjs -d src/ormconfig.ts"
